# Virtual_Stock_Trading_Platform

./: .gitignore  第一周周报.md
My_Program/: CMakeLists.txt  main.cpp  swy.cpp  swy.h  widget.cpp  widget.h
cpp_server/: CMakeLists.txt  Jenkinsfile  Tables.db  main.cpp  run_server.bat  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
cpp_server/controller/: ai_ctrl.cpp  ai_ctrl.h  asset_ctrl.cpp  asset_ctrl.h  predict_ctrl.cpp  predict_ctrl.h  stock_ctrl.cpp  stock_ctrl.h  user_ctrl.cpp  user_ctrl.h
cpp_server/dao/: account_dao.cpp  account_dao.h  database.h  news_dao.cpp  news_dao.h  position_dao.cpp  position_dao.h  prediction_dao.cpp  prediction_dao.h  stock_dao.cpp  stock_dao.h  user_dao.cpp  user_dao.h
cpp_server/model/: account.h  news_analysis.h  position.h  prediction.h  stock.h  stock_history.h  trade.h  user.h
cpp_server/service/: kline_fetcher.cpp  kline_fetcher.h  news_fetcher.cpp  news_fetcher.h  predictor.cpp  predictor.h  stock_fetcher.cpp  stock_fetcher.h
cpp_server/utils/: http_client.cpp  http_client.h
